# shopify-audit-tools

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  scratch_test.py  setup.sh
audit/: __init__.py  cli.py  server.py
audit/adapters/: __init__.py  shopify_graphql.py
audit/core/: exporter.py  models.py  orchestrator.py  scorer.py
audit/platform/: detector.py
audit/templates/: report.html
audit/tiers/: tier0_scrapling.py  tier1_browser.py  tier2_lighthouse.py
